Closed Bug 1209175 Opened 10 years ago Closed 10 years ago

Fix a conditional statement in msgMapiHook.cpp

Categories

(MailNews Core :: Simple MAPI, defect)

defect
Not set
normal

Tracking

(firefox44 affected)

RESOLVED FIXED
Thunderbird 44.0
Tracking Status
firefox44 --- affected

People

(Reporter: ssitter, Assigned: ssitter)

Details

(Whiteboard: [pvs-studio])

Attachments

(1 file)

From http://www.viva64.com/en/b/0347/ PVS-Studio's diagnostic message: V523 The 'then' statement is equivalent to the 'else' statement. mailnews/mapi/mapihook/src/msgMapiHook.cpp 677 if (aFlags & MAPI_UNICODE) { if (aDelimChar) strDelimChars.Assign (aDelimChar); if (aFilePaths) strFilePaths.Assign (aFilePaths); } else { if (aDelimChar) strDelimChars.Assign(aDelimChar); if (aFilePaths) strFilePaths.Assign ( aFilePaths); }
Assignee: nobody → ssitter
Status: NEW → ASSIGNED
Attachment #8666865 - Flags: review?(rkent)
Comment on attachment 8666865 [details] [diff] [review] Remove unnecessary conditional statement in msgMapiHook.cpp Review of attachment 8666865 [details] [diff] [review]: ----------------------------------------------------------------- Checking the CVS history at https://github.com/ehsan/mozilla-cvs-history/commit/cdd0eeaddeb53a9895ccaeb4f8b36b6c5728cdc2 this came about originally because new string classes were added, and the previous version needed separate string calls. So this is a valid change.
Attachment #8666865 - Flags: review?(rkent) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 44.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: