Bug 1209175 - Fix a conditional statement in msgMapiHook.cpp. r=rkent